--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,31 +1,1 @@
-.container {
-    text-align: center;
-    font-size: 25px;
-}
-
-.storage_life {
-    width: 200px;
-    text-align: center;
-}
-
-div {
-    margin-bottom: 30px;
-}
-
-button, input {
-    height: 40px;
-    font-size: 25px
-}
-
-.text {
-    font-weight: bold;
-    color: red;
-}
-
-.label-text {
-    font-weight: bold;
-}
-
-.input {
-    margin-bottom: 10px;
-}
+/* from applications.css */
