Add display logs from controllers

--- a/app/views/admin/profile/index.html.erb
+++ b/app/views/admin/profile/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Панель админа</h1>
 
-
+<%= link_to "Логи из контроллера", admin_logs_from_controllers_path %>
 
 <%= button_to 'Выйти', admin_session_path, method: :delete %>
