--- a/app/views/admin/profile/index.html.erb
+++ b/app/views/admin/profile/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Панель админа</h1>
 
 <%= link_to "Логи из контроллера", admin_logs_from_controllers_path %>
+<br>
+<%= link_to "Логи приложения из файла log/production.log", admin_logs_from_file_path %>
 
 <%= button_to 'Выйти', admin_session_path, method: :delete %>
