Add new form for products

--- a/app/views/converter/index.html.erb
+++ b/app/views/converter/index.html.erb
@@ -23,7 +23,8 @@
     </div>
 
     <div>
-        <%= button_to "Сохранить", new_product_path, method: :get %>
+        <%= button_to "Сохранить", new_product_path, method: :get, 
+                      params: {date_of_rejection: @date_of_60_precent} %>
     </div>
 <% end %>
 
