--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<%= form_with model: @product do |form| %>
+    <div>
+        <%= form.hidden_field :date_of_rejection, value: @date_of_rejection %>
+        Браковать с: <%= @date_of_rejection %>
+    </div>
+
+    <div>
+        PLU: <%= form.number_field :plu %>
+    </div>
+
+    <div>
+        Количество: <%= form.number_field :quantity %>
+        <%= form.radio_button :type_of_quantity, "кг" %>
+        <%= form.label :type_of_quantity_kg, 'кг' %>
+        <%= form.radio_button :type_of_quantity, "шт" %>
+        <%= form.label :type_of_quantity_sht, 'шт' %>
+    </div>
+
+    <%= form.submit "сохранить" %>
+<% end %>
