--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<% @products.each do |product| %>
+    <div>
+    Браковать с: <%= product.date_of_rejection %>
+    </div>
+
+    <div>
+        PLU: <%= product.plu %>
+    </div>
+
+    <div>
+        Количество: <%= product.quantity %> <%= product.type_of_quantity %>
+    </div>
+    <hr>
+<% end %>
