Add delete a product

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,5 +10,8 @@
     <div>
         Количество: <%= product.quantity %> <%= product.type_of_quantity %>
     </div>
+
+    <%= button_to "Удалить", product_path(product), method: :delete %>
+
     <hr>
 <% end %>
