Add transfer between all products and one product

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,8 @@
         Количество: <%= product.quantity %> <%= product.type_of_quantity %>
     </div>
 
+    <%= button_to "Подробнее", product_path(product), method: :get %>
+
     <%= button_to "Удалить", product_path(product), method: :delete %>
 
     <hr>
