--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,9 +11,9 @@
         Количество: <%= product.quantity %> <%= product.type_of_quantity %>
     </div>
 
-    <%= button_to "Подробнее", product_path(product), method: :get %>
-
-    <%= button_to "Удалить", product_path(product), method: :delete %>
+    <div>
+        <%= button_to "Подробнее", product_path(product), method: :get %>
+    </div>
 
     <hr>
     <hr>
