--- a/app/views/converter/index.html.erb
+++ b/app/views/converter/index.html.erb
@@ -24,7 +24,7 @@
 
     <div>
         <%= button_to "Сохранить", new_product_path, method: :get, 
-                      params: {date_of_rejection: @date_of_60_precent} %>
+                      params: {date_of_rejection: @date_of_60_precent.strftime("%d - %m - %y") } %>
     </div>
 <% end %>
 
