--- a/app/assets/stylesheets/products/products.css
+++ b/app/assets/stylesheets/products/products.css
@@ -14,11 +14,70 @@ button, input {
     font-size: 25px
 }
 
-
-.label-text {
-    font-weight: bold;
+img {
+    width: 100%;
 }
 
-.input {
-    margin-bottom: 10px;
+
+.file-upload input[type="file"]{
+    display: none;/* скрываем input file */
+}
+
+/* задаем стили кнопки выбора файла*/
+
+.file-upload {
+
+    position: relative;
+    
+    overflow: hidden;
+    
+    width: 250px;
+    
+    height: 40px;
+    
+    background: green;
+    
+    border-radius: 10px;
+    
+    color: #fff;
+    
+    text-align: center;
+
+    margin-left: auto;
+    margin-right: auto; 
+    
+}
+
+/* Растягиваем label на всю область блока .file-upload */
+
+.file-upload label {
+
+    display: block;
+
+    position: absolute;
+
+    top: 0;
+
+    left: 0;
+
+    width: 100%;
+
+    height: 100%;
+
+    cursor: pointer;
+
+    text-align: center;
+
+}
+
+/* стиль текста на кнопке*/
+
+.file-upload span {
+
+    line-height: 40px;
+
+    font-weight:bold;
+
+    text-align: center;
+
 }
