--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,12 +12,13 @@
 
 <div>
     <% @product.photos.each do |photo| %>
-        <%= image_tag photo %>
+        <div><%= image_tag photo %></div>
     <% end %>
 </div>
 
 <div>
-    <%= button_to "Удалить", product_path(@product), method: :delete %>
+    <%= button_to "Удалить", product_path(@product), method: :delete, 
+                  onclick: "return confirm('Точно удалить?')" %>
 </div>
 
 <div>
