Add product image for all products page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,10 @@
     </div>
 
     <div>
+        <%= image_tag product.photos.last %>
+    </div>
+
+    <div>
         <%= button_to "Подробнее", product_path(product), method: :get %>
     </div>
 
