--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-        <%= button_to "Подробнее", product_path(product), method: :get %>
+        <%= button_to "подробнее", product_path(product), method: :get %>
     </div>
 
     <hr>
@@ -28,5 +28,5 @@
 <% end %>
 
 <div>
-    <%= button_to "Вернуться на главную", root_path, method: :get %>
+    <%= button_to "вернуться на главную", root_path, method: :get %>
 </div>
