--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
 </div>
 
 <div>
-    <%= button_to "Удалить", product_path(@product), method: :delete, 
+    <%= button_to "удалить", product_path(@product), method: :delete, 
                   onclick: "return confirm('Точно удалить?')" %>
 </div>
 
