--- a/app/assets/stylesheets/products/products.css
+++ b/app/assets/stylesheets/products/products.css
@@ -18,66 +18,36 @@ img {
     width: 100%;
 }
 
-
 .file-upload input[type="file"]{
-    display: none;/* скрываем input file */
+    display: none;
 }
-
-/* задаем стили кнопки выбора файла*/
 
 .file-upload {
-
     position: relative;
-    
     overflow: hidden;
-    
     width: 250px;
-    
     height: 40px;
-    
     background: green;
-    
     border-radius: 10px;
-    
     color: #fff;
-    
     text-align: center;
-
     margin-left: auto;
     margin-right: auto; 
-    
 }
-
-/* Растягиваем label на всю область блока .file-upload */
 
 .file-upload label {
-
     display: block;
-
     position: absolute;
-
     top: 0;
-
     left: 0;
-
     width: 100%;
-
     height: 100%;
-
     cursor: pointer;
-
     text-align: center;
-
 }
 
-/* стиль текста на кнопке*/
-
 .file-upload span {
-
     line-height: 40px;
-
     font-weight:bold;
-
     text-align: center;
-
 }
