--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,5 +30,9 @@
 </div>
 
 <div>
+    <%= button_to "вернуться на главную", root_path %>
+</div>
+
+<div>
     <%= button_to "весь список", products_path, method: :get %>
 </div>
