Change names of buttons

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,5 +34,5 @@
 </div>
 
 <div>
-    <%= button_to "весь список", products_path, method: :get %>
+    <%= button_to "все товары на продажу", products_path, method: :get %>
 </div>
