--- a/app/assets/stylesheets/products/products.css
+++ b/app/assets/stylesheets/products/products.css
@@ -18,6 +18,16 @@ img {
     width: 100%;
 }
 
+.separator-hr {
+	margin: 20px 0;
+	padding: 0;
+	height: 10px;
+	border: none;
+	color: orange;
+	background-image: linear-gradient(90deg, orange, orange 33.33%, transparent 33.33%, transparent 100%);
+	background-size: 3px 100%;
+}
+
 .file-upload input[type="file"]{
     display: none;
 }
