--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <%= button_to "вернуться на главную", root_path %>
+    <%= button_to "вернуться на главную", root_path, method: :get %>
 </div>
 
 <div>
