--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div>
-        Количество: <%= form.number_field :quantity %>
+        Количество: <%= form.number_field :quantity, min: "0.0", step: "0.001" %>
     </div>
 
     <div>
