--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <div>
-        Количество: <%= form.number_field :quantity %>
+        Количество: <%= form.number_field :quantity, min: "0.0", step: "0.001" %>
     </div>
 
     <div>
