Make a description change for product

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -23,6 +23,10 @@
         <%= form.label :type_of_quantity_шт, 'шт' %>
     </div>
 
+    <div>
+        Описание: <%= form.text_field :description %>
+    </div>
+
     <%= form.submit "сохранить" %>
 <% end %>
 </div>
